force-app/main/default/objects/Test__c/fields/Api_Token__c.field-meta.xml
<CustomField>
    <fullName>Api_Token__c</fullName>
    <label>Api Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>