force-app/main/default/objects/Test__c/fields/Available_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Available_Payment_Method__c</fullName>
    <label>Available Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Echeck</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>