force-app/main/default/objects/Test__c/fields/Available_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Available_Payment_Type__c</fullName>
    <label>Available Payment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instant</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>