force-app/main/default/objects/Test__c/recordTypes/ChargeBee.recordType-meta.xml
<RecordType>
    <fullName>ChargeBee</fullName>
    <active>true</active>
    <label>ChargeBee</label>
</RecordType>