force-app/main/default/objects/Test__c/recordTypes/PayPal.recordType-meta.xml
<RecordType>
    <fullName>PayPal</fullName>
    <active>true</active>
    <label>PayPal</label>
</RecordType>